fix control pannel on small screens

--- a/src/components/layouts/Control/_control.scss
+++ b/src/components/layouts/Control/_control.scss
@@ -58,6 +58,9 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media only screen and (max-width: 1640px) {
+            gap: 30px;
+        }
         width: 100%;
         padding-bottom: 22px;
         padding-left: 58px;
